# modu

./: Cargo.toml  README.md  input.modu
.github/workflows/: deploy.yml  rust.yml
extensions/modu-lang/: language-configuration.json  vsc-extension-quickstart.md
extensions/vscode/: CHANGELOG.md  README.md  (+5 more)
lang/: .gitignore  Cargo.toml  README.md  input.modu
lang/examples/: BROKEN_nesting_many_funcs.modu  advanced_math.modu  array.modu  curl_based_http_client_test.modu  file_io.modu  functions.modu  if_exists.modu  if_statements.modu  import_main.modu  imports.modu  input.modu  json.modu  math.modu  mixed.modu  multiline_comments.modu  nesting.modu  nesting_many_funcs.modu  os_exec.modu  os_package.modu  return_statements.modu  semicolon_mix.modu  time.modu  undefined_var.modu  undefined_var_error.modu  unexpected_char_err.modu  variables.modu  write_file_with_os_pkg.modu  yapper.modu
lang/examples/advanced/ffi_http/: main.modu
lang/examples/advanced/ffi_http/http_client/: Cargo.toml
lang/examples/advanced/ffi_http/http_client/src/: lib.rs
lang/examples/ffi/: libffi_test.dylib  main.modu
lang/examples/ffi/ffi_test/: Cargo.toml
lang/examples/ffi/ffi_test/src/: lib.rs
lang/examples/using_packages/: main.modu  project.toml
lang/src/: ast.rs  eval.rs  internal.rs  lexer.rs  main.rs  parser.rs  utils.rs
lang/src/cli/: init.rs  install.rs  login.rs  mod.rs  publish.rs  repl.rs  run.rs  server.rs  uninstall.rs
src/: ast.rs  eval.rs  lexer.rs  main.rs  parser.rs
web/: .env.example  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
(+25 files in other folders)
