[package]
name = "modu"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/cyteon/modu"
homepage = "https://cyteon.tech/modu"
description = "A fast and simple interpreted language"
documentation = "https://www.cyteon.tech/modu/docs/quickstart"
license = "MIT"
authors = ["Cyteon"]
keywords = ["programming-language", "cli", "interprter", "language"]

[dependencies]
bat = "0.24.0"
logos = "0.15.0"
