[package]
name = "modu"
version = "0.5.2"
edition = "2021"
repository = "https://github.com/cyteon/modu"
homepage = "https://cyteon.tech/modu"
description = "A fast and simple interpreted language"
documentation = "https://www.cyteon.tech/modu/docs/quickstart"
license = "MIT"
authors = ["Cyteon"]
keywords = ["programming-language", "cli", "interpreter", "language"]

[dependencies]
bat = "0.24.0"
chrono = "0.4.39"
logos = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.12.11", features = ["blocking", "json"] }
rouille = "3.6.2"
serde_json = "1.0.134"
toml = "0.8.19"
zip = "2.2.2"
